--- a/huehuetenango.html
+++ b/huehuetenango.html
@@ -1013,7 +1013,7 @@
           <div class="row">
             <div class="col-12">
              <a href="#" class="d-block position-relative">
-              <img src="img/villa_nueva/villa_nueva_tour.webp" class="img-fluid" alt="Villa Nueva">
+              <img src="img/huehuetenango/huehuetenango_tour.webp" class="img-fluid" alt="Villa Nueva">
              </a>
             </div>
           </div>
@@ -1047,13 +1047,13 @@
             <div class="aulas row">
               <div class="Learnlab  position-relative offset-md-0 col-lg-6">
                 <a href="#" class="d-flex align-items-center justify-content-center overflow-hidden position-absolute h-100 w-100 text-light text-uppercase text-decoration-none">
-                  <label class="d-block w-50 lh-sm fs-5 fs-md-4 fs-xxl-3 text-center">Laboratorios de Cómputo</label>
+                  <label class="d-block w-50 lh-sm fs-5 fs-md-4 fs-xxl-3 text-center">Laboratorios de Química</label>
                   <span class="btn"></span>
                 </a>
               </div>
               <div class="Villanueva_Aula  overflow-hidden position-relative offset-md-0 col-lg-6">
                 <a href="#" class="d-flex align-items-center justify-content-center overflow-hidden position-absolute h-100 w-100 text-light text-uppercase text-decoration-none">
-                  <label class="d-block w-50 lh-sm fs-5 fs-md-4 fs-xxl-3 text-center">Laboratorio de Arquitectura</label>
+                  <label class="d-block w-50 lh-sm fs-5 fs-md-4 fs-xxl-3 text-center">Laboratorio de Cocina</label>
                   <span class="btn"></span>
                 </a>
               </div>
@@ -1101,26 +1101,26 @@
           <div class="carousel-item active">
             <div class="row">
               <div class="col">
-                <img src="img/villa_nueva/villa_nueva_laboratorio1.webp" class="d-block w-100" alt="Imagen 1" onclick="showFullScreen('img/villa_nueva/villa_nueva_laboratorio1.webp')">
+                <img src="img/huehuetenango/huehuetenango_laboratorio1.webp" class="d-block w-100" alt="Imagen 1" onclick="showFullScreen('img/huehuetenango/huehuetenango_laboratorio1.webp')">
               </div>
               <div class="col">
-                <img src="img/villa_nueva/villa_nueva_laboratorio2.webp" class="d-block w-100" alt="Imagen 2" onclick="showFullScreen('img/villa_nueva/villa_nueva_laboratorio2.webp')">
+                <img src="img/huehuetenango/huehuetenango_laboratorio2.webp" class="d-block w-100" alt="Imagen 2" onclick="showFullScreen('img/huehuetenango/huehuetenango_laboratorio2.webp')">
               </div>
               <div class="col">
-                <img src="img/villa_nueva/villa_nueva_laboratorio1.webp" class="d-block w-100" alt="Imagen 3" onclick="showFullScreen('img/villa_nueva/villa_nueva_laboratorio1.webp')">
+                <img src="img/huehuetenango/huehuetenango_laboratorio1.webp" class="d-block w-100" alt="Imagen 3" onclick="showFullScreen('img/huehuetenango/huehuetenango_laboratorio1.webp')">
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="row">
               <div class="col">
-                <img src="img/villa_nueva/villa_nueva_laboratorio2.webp" class="d-block w-100" alt="Imagen 4" onclick="showFullScreen('img/villa_nueva/villa_nueva_laboratorio2.webp')">
+                <img src="img/huehuetenango/huehuetenango_laboratorio1.webp" class="d-block w-100" alt="Imagen 4" onclick="showFullScreen('img/huehuetenango/huehuetenango_laboratorio1.webp')">
               </div>
               <div class="col">
-                <img src="img/villa_nueva/villa_nueva_laboratorio1.webp" class="d-block w-100" alt="Imagen 5" onclick="showFullScreen('img/villa_nueva/villa_nueva_laboratorio1.webp')">
+                <img src="img/huehuetenango/huehuetenango_laboratorio2.webp" class="d-block w-100" alt="Imagen 5" onclick="showFullScreen('img/huehuetenango/huehuetenango_laboratorio2.webp')">
               </div>
               <div class="col">
-                <img src="img/villa_nueva/villa_nueva_laboratorio2.webp" class="d-block w-100" alt="Imagen 6" onclick="showFullScreen('img/villa_nueva/villa_nueva_laboratorio2.webp')">
+                <img src="img/huehuetenango/huehuetenango_laboratorio1.webp" class="d-block w-100" alt="Imagen 6" onclick="showFullScreen('img/huehuetenango/huehuetenango_laboratorio1.webp')">
               </div>
             </div>
           </div>
@@ -1145,10 +1145,10 @@
     <script>
       function showFullScreen(imageSrc) {
 
-        if (imageSrc == "img/villa_nueva/villa_nueva_laboratorio1.webp") {
-          lab = "Cómputo";
-        } else if(imageSrc == "img/villa_nueva/villa_nueva_laboratorio2.webp") {
-          lab = "Arquitectura";
+        if (imageSrc == "img/huehuetenango/huehuetenango_laboratorio1.webp") {
+          lab = "Quimíca";
+        } else if(imageSrc == "img/huehuetenango/huehuetenango_laboratorio2.webp") {
+          lab = "Cocina";
         }
         else {
           lab = "x";
