--- a/quetzaltenango.html
+++ b/quetzaltenango.html
@@ -1163,29 +1163,44 @@
           <div class="carousel-item active">
             <div class="row">
               <div class="col">
-                <img src="img/quetzaltenango/quetzaltenango_laboratorio1.webp" class="d-block w-100" alt="Imagen 1" onclick="showFullScreen('img/quetzaltenango/quetzaltenango_laboratorio1.webp')">
+                <img src="img/quetzaltenango/galeria/quetzaltenango_galeria_1.webp" class="d-block w-100" alt="Imagen 1" onclick="showFullScreen('img/quetzaltenango/galeria/quetzaltenango_galeria_1.webp')">
               </div>
               <div class="col">
-                <img src="img/quetzaltenango/quetzaltenango_laboratorio2.webp" class="d-block w-100" alt="Imagen 2" onclick="showFullScreen('img/quetzaltenango/quetzaltenango_laboratorio2.webp')">
+                <img src="img/quetzaltenango/galeria/quetzaltenango_galeria_2.webp" class="d-block w-100" alt="Imagen 2" onclick="showFullScreen('img/quetzaltenango/galeria/quetzaltenango_galeria_2.webp')">
               </div>
               <div class="col">
-                <img src="img/quetzaltenango/quetzaltenango_laboratorio1.webp" class="d-block w-100" alt="Imagen 3" onclick="showFullScreen('img/quetzaltenango/quetzaltenango_laboratorio1.webp')">
+                <img src="img/quetzaltenango/galeria/quetzaltenango_galeria_3.webp" class="d-block w-100" alt="Imagen 3" onclick="showFullScreen('img/quetzaltenango/galeria/quetzaltenango_galeria_3.webp')">
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="row">
               <div class="col">
-                <img src="img/quetzaltenango/quetzaltenango_laboratorio2.webp" class="d-block w-100" alt="Imagen 4" onclick="showFullScreen('img/quetzaltenango/quetzaltenango_laboratorio2.webp')">
+                <img src="img/quetzaltenango/galeria/quetzaltenango_galeria_7.webp" class="d-block w-100" alt="Imagen 4" onclick="showFullScreen('img/quetzaltenango/galeria/quetzaltenango_galeria_7.webp')">
               </div>
               <div class="col">
-                <img src="img/quetzaltenango/quetzaltenango_laboratorio1.webp" class="d-block w-100" alt="Imagen 5" onclick="showFullScreen('img/quetzaltenango/quetzaltenango_laboratorio1.webp')">
+                <img src="img/quetzaltenango/galeria/quetzaltenango_galeria_8.webp" class="d-block w-100" alt="Imagen 5" onclick="showFullScreen('img/quetzaltenango/galeria/quetzaltenango_galeria_8.webp')">
               </div>
               <div class="col">
-                <img src="img/quetzaltenango/quetzaltenango_laboratorio2.webp" class="d-block w-100" alt="Imagen 6" onclick="showFullScreen('img/quetzaltenango/quetzaltenango_laboratorio2.webp')">
+                <img src="img/quetzaltenango/galeria/quetzaltenango_galeria_9.webp" class="d-block w-100" alt="Imagen 6" onclick="showFullScreen('img/quetzaltenango/galeria/quetzaltenango_galeria_9.webp')">
               </div>
             </div>
           </div>
+
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col">
+                <img src="img/quetzaltenango/galeria/quetzaltenango_galeria_10.webp" class="d-block w-100" alt="Imagen 4" onclick="showFullScreen('img/quetzaltenango/galeria/quetzaltenango_galeria_10.webp')">
+              </div>
+              <div class="col">
+                <img src="img/quetzaltenango/galeria/quetzaltenango_galeria_11.webp" class="d-block w-100" alt="Imagen 5" onclick="showFullScreen('img/quetzaltenango/galeria/quetzaltenango_galeria_11.webp')">
+              </div>
+              <div class="col">
+                <img src="img/quetzaltenango/galeria/quetzaltenango_galeria_13.webp" class="d-block w-100" alt="Imagen 6" onclick="showFullScreen('img/quetzaltenango/galeria/quetzaltenango_galeria_13.webp')">
+              </div>
+            </div>
+          </div>
+
         </div>
 
         <!-- Flechas de navegación -->
@@ -1207,10 +1222,31 @@
     <script>
       function showFullScreen(imageSrc) {
 
-        if (imageSrc == "img/quetzaltenango/quetzaltenango_laboratorio1.webp") {
-          lab = "Arquitectura";
-        } else if(imageSrc == "img/quetzaltenango/quetzaltenango_laboratorio2.webp") {
-          lab = "Cómputo";
+        if (imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_1.webp") {
+          lab = "Instalaciones del Campus Universitario de Quetzaltenango";
+        } else if(imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_2.webp") {
+          lab = "Instalaciones del Campus Universitario de Quetzaltenango";
+        }
+        else if(imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_3.webp") {
+          lab = "Instalaciones del Campus Universitario de Quetzaltenango";
+        }
+        else if(imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_7.webp") {
+          lab = "Espacio de aulas";
+        }
+        else if(imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_8.webp") {
+          lab = "Instalaciones del Campus Universitario de Quetzaltenango";
+        }
+        else if(imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_9.webp") {
+          lab = "Área de cafetería";
+        }
+        else if(imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_10.webp") {
+          lab = "Instalaciones del Campus Universitario de Quetzaltenango";
+        }
+        else if(imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_11.webp") {
+          lab = "Espacio de aulas";
+        }
+        else if(imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_13.webp") {
+          lab = "Instalaciones del Campus Universitario de Quetzaltenango";
         }
         else {
           lab = "x";
@@ -1222,7 +1258,7 @@
               <div class="modal-content">
                 <div class="modal-body">
                   <img src="${imageSrc}" class="img-fluid" alt="Imagen a pantalla completa">
-                 <br><br><p>Detalle: Laboratorio de ${lab}.</p>
+                 <br><br><p>Detalle: ${lab}.</p>
                 </div>
               </div>
             </div>
