--- a/cu.html
+++ b/cu.html
@@ -680,7 +680,7 @@
           <div class="container h-100">
             <div class="row h-100 align-items-center">
               <div class="col-12 ">
-                <h1>Campus<label>Quetzaltenango</label></h1>
+                <h1>Campus<label>Universitario</label></h1>
               </div>
             </div>
           </div>
