--- a/cu.html
+++ b/cu.html
@@ -834,7 +834,10 @@
 
           <div class="row">
             <div class="col-12">
-              <p class="text-x2 justify-content-center">Se ubica dentro de las cincho ciudades más competitivas e importantes del país, una demandante de oportunidades de presencia Universitaria por su población, puesto que es la tercera ciudad más poblada del país. Villa Nueva fue el segundo Campus Universitario donde la UMG ha logrado satisfacer las necesidades educativas.</p>
+              <p class="text-x2 justify-content-center">El centro universitario de Campus Villa Nueva nace en el año 2010, con actividades administrativas y en febrero de 2011 inicia la actividad académica, ubicando el primer Centro Universitario en el Colegio VIDA, ubicado en Residenciales Catalina con las carreras en plan fin de semana de Ciencias Jurídicas y Sociales, Psicología Clínica, Administración de Empresas, Contaduría Pública y Auditoría e Ingeniería en Sistemas.  Dada la demanda hubo necesidad de suscribir convenios con otros establecimientos educativos como el IMBPC y Liceo Técnico Villa Nueva, y en el 2016 se agrega el Colegio Internaciones y Nuestra Patria.
+           <br><br>
+           En el año 2013, se colocó la primera piedra de lo que sería el primer módulo de las nuevas instalaciones, ubicado en el Km. 20 de la ruta al parque Naciones Unidas (antigua carretera hacia Amatitlán) y abarca un área de 10 manzanas.La inauguración fue en febrero de 2014, con un primer edificio terminado, con tres niveles y 34 aulas.
+              </p>
             </div></div>
 
             <div class="row">
