--- a/single.html
+++ b/single.html
@@ -784,6 +784,7 @@
 
     <main>
       <article>
+
         <div class="container">
           <div class="row">
             <div class="col-12">
@@ -792,8 +793,8 @@
               </h1>
             </div>
           </div>
-          <div class="row">
-            <div class="col-12 fs-sm-5 text-secondary">
+          <div class="row justify-content-md-center">
+            <div class="col-8 mb-8 text-secondary">
               <p class="text-body mt-2">
                 A continuación te presentamos las diferentes formas de pagar la Universidad.
               </p>
@@ -848,6 +849,13 @@
                 A continuación puede descargar los pasos para realizar la gestión.
               </p>
             </div>
+
+
+            <div class="col-4 mb-4 text-secondary">
+              fasfas
+              </div>
+
+
           </div>
           <div class="row">
             <div class="col-12 col-sm-9 col-md-6 col-lg-4">
@@ -859,6 +867,9 @@
               </div>
             </div>
           </div>
+          
+
+  
         </div>
       </article>
 
