--- a/info.html
+++ b/info.html
@@ -494,7 +494,7 @@
         <div class="col-lg-4 mb-4">
           <div class="card-service icons_service block_service">
             <div class="card-cabecera">
-          <h2><label>Registro y control</label> académico</h2>
+          <h2><label>Registro y Control</label> Académico</h2>
           </div>
         <ul class="lista-enlaces">
         
@@ -539,7 +539,7 @@
           <div class="col-lg-4 mb-4">
             <div class="card-service icons_service block_service">
               <div class="card-cabecera">
-            <h2><label>Secretaría</label> general</h2>
+            <h2><label>Secretaría</label> General</h2>
             </div>
           <ul class="lista-enlaces">
           
