--- a/quetzaltenango.html
+++ b/quetzaltenango.html
@@ -805,12 +805,14 @@
                 <div class="row">
                   <div class="col-6 contacto_info" style="border-right: 1px solid #2c557d;">
                     <h4>Quetzaltenango</h4>
-                    <p>1a. calle y 9a. avenida, Los Alisos y Sauces, zona 1, La Esperanza Quetzaltenango.<br> PBX: 79378787 Ext. 3611, 3612, 3614, 3615.</p>
+                    <p>1a. calle y 9a. avenida, Los Alisos y Sauces, zona 1, La Esperanza Quetzaltenango.<br> PBX: 79378787 Ext. 3611, 3612, 3614, 3615.
+                      <br><br> <a href="mailto:quetzaltenango@umg.edu.gt">quetzaltenango@umg.edu.gt</a>
+                    </p>
                    <br><p><strong>Horarios:</strong> Lunes a viernes de 7:00 a 21:00 horas. <br> Sábado de 7:00 a 16:00 horas. <br>Domingo de 8:00 a 12:00 horas.</p>
                   </div>
                   <div class="col-6 contacto_info" style="padding-left: 50px;">
               
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3856.354963437247!2d-91.5492136!3d14.861416899999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x858ebd527a562039%3A0xb167d7ae86ae9517!2sUniversidad%20Mariano%20G%C3%A1lvez!5e0!3m2!1ses-419!2sgt!4v1698091515461!5m2!1ses-419!2sgt" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3856.354963437247!2d-91.5492136!3d14.861416899999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x858ebd527a562039%3A0xb167d7ae86ae9517!2sUniversidad%20Mariano%20G%C3%A1lvez!5e0!3m2!1ses-419!2sgt!4v1698091515461!5m2!1ses-419!2sgt" width="100%" height="310" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                    </div>
                 </div>
               </div>
@@ -1155,18 +1157,6 @@
         </div>
       </section>
 
-     <!-- <section class="py-4 text-center">
-        <div class="container">
-
-          <div class="row">
-            <div class="col-12 mt-2 mb-3">
-              <picture>
-                <img src="img/villa_nueva/villa_nueva_tour.webp" style="width: 100%;" alt="Villa Nueva">
-              </picture>
-            </div>
-          </div>
-        </div>
-      </section>-->
 
       <section class="Aula  py-4 text-center">
         <div class="container">
@@ -1182,36 +1172,20 @@
             <div class="aulas row">
               <div class="Learnlab  position-relative offset-md-0 col-lg-6">
                 <a href="#" class="d-flex align-items-center justify-content-center overflow-hidden position-absolute h-100 w-100 text-light text-uppercase text-decoration-none">
-                  <label class="d-block w-50 lh-sm fs-5 fs-md-4 fs-xxl-3 text-center">Laboratorio de Arquitectura</label>
+                  <label class="d-block w-50 lh-sm fs-5 fs-md-4 fs-xxl-3 text-center">Laboratorio de Cómputo</label>
                   <span class="btn"></span>
                 </a>
               </div>
               <div class="Villanueva_Aula  overflow-hidden position-relative offset-md-0 col-lg-6">
                 <a href="#" class="d-flex align-items-center justify-content-center overflow-hidden position-absolute h-100 w-100 text-light text-uppercase text-decoration-none">
-                  <label class="d-block w-50 lh-sm fs-5 fs-md-4 fs-xxl-3 text-center">Laboratorios de Cómputo</label>
+                  <label class="d-block w-50 lh-sm fs-5 fs-md-4 fs-xxl-3 text-center">Laboratorio del I2QB3</label>
                   <span class="btn"></span>
                 </a>
               </div>
 
             </div>
 
-          <!-- <div class="row">
-            <div class="offset-md-0 col-lg-6">
-              <a href="villa_nueva/laboratorios">
-             <picture>
-              <img src="img/villa_nueva/villa_nueva_laboratorio1.webp" class="image" alt="Villa Nueva">
-             </picture></a>
-            </div>
-            <div class="offset-md-0 col-lg-6">
-              <a href="villa_nueva/laboratorios">
-              <picture>
-               <img src="img/villa_nueva/villa_nueva_laboratorio2.webp" class="image" alt="Villa Nueva">
-              </picture>
-              </a>
-             </div>
-          </div>
-        </div> -->
-
+ 
       </section>
 
 
@@ -1270,6 +1244,20 @@
               </div>
               <div class="col">
                 <img src="img/quetzaltenango/galeria/quetzaltenango_galeria_13.webp" class="d-block w-100" alt="Imagen 6" onclick="showFullScreen('img/quetzaltenango/galeria/quetzaltenango_galeria_13.webp')">
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col">
+                <img src="img/quetzaltenango/galeria/quetzaltenango_galeria_14.webp" class="d-block w-100" alt="Imagen 4" onclick="showFullScreen('img/quetzaltenango/galeria/quetzaltenango_galeria_14.webp')">
+              </div>
+              <div class="col">
+                <img src="img/quetzaltenango/galeria/quetzaltenango_galeria_15.webp" class="d-block w-100" alt="Imagen 5" onclick="showFullScreen('img/quetzaltenango/galeria/quetzaltenango_galeria_15.webp')">
+              </div>
+              <div class="col">
+                <img src="img/quetzaltenango/galeria/quetzaltenango_galeria_16.webp" class="d-block w-100" alt="Imagen 6" onclick="showFullScreen('img/quetzaltenango/galeria/quetzaltenango_galeria_16.webp')">
               </div>
             </div>
           </div>
@@ -1416,7 +1404,7 @@
       </section>
   
 
-      <section class="py-4 text-center contacto-footer">
+     <!-- <section class="py-4 text-center contacto-footer">
         <div class="container">
 
           <div class="row">
@@ -1438,7 +1426,7 @@
              </div>
           </div>
         </div>
-      </section>
+      </section> -->
       
       <footer class="position-relative overflow-x-hidden pt-5 pb-4 pt-sm-6 pt-md-7 pt-lg-8">
         <div class="container g-lg-0">
