Centros Universitarios y Facultad de Odontología

--- a/quetzaltenango.html
+++ b/quetzaltenango.html
@@ -1286,28 +1286,37 @@
         if (imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_1.webp") {
           lab = "Instalaciones del Campus Universitario de Quetzaltenango";
         } else if(imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_2.webp") {
-          lab = "Instalaciones del Campus Universitario de Quetzaltenango";
+          lab = "Instalaciones del Campus Universitario de Quetzaltenango, Universidad Mariano Gálvez de Guatemala";
         }
         else if(imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_3.webp") {
-          lab = "Instalaciones del Campus Universitario de Quetzaltenango";
+          lab = "Instalaciones del Campus Universitario de Quetzaltenango, Universidad Mariano Gálvez de Guatemala";
         }
         else if(imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_7.webp") {
-          lab = "Espacio de aulas";
+          lab = "Espacio de aulas, Campus Universitario de Quetzaltenango, Universidad Mariano Gálvez de Guatemala";
         }
         else if(imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_8.webp") {
-          lab = "Instalaciones del Campus Universitario de Quetzaltenango";
+          lab = "Instalaciones del Campus Universitario de Quetzaltenango, Universidad Mariano Gálvez de Guatemala";;
         }
         else if(imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_9.webp") {
-          lab = "Área de cafetería";
+          lab = "Área de cafetería, Campus Universitario de Quetzaltenango, Universidad Mariano Gálvez de Guatemala";
         }
         else if(imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_10.webp") {
-          lab = "Instalaciones del Campus Universitario de Quetzaltenango";
+          lab = "Instalaciones del Campus Universitario de Quetzaltenango, Universidad Mariano Gálvez de Guatemala";
         }
         else if(imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_11.webp") {
-          lab = "Espacio de aulas";
+          lab = "Espacio de aulas, Campus Universitario de Quetzaltenango, Universidad Mariano Gálvez de Guatemala";
         }
         else if(imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_13.webp") {
-          lab = "Instalaciones del Campus Universitario de Quetzaltenango";
+          lab = "Instalaciones del Campus Universitario de Quetzaltenango, Universidad Mariano Gálvez de Guatemala";
+        }
+        else if(imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_14.webp") {
+          lab = "Instalaciones del Campus Universitario de Quetzaltenango, Universidad Mariano Gálvez de Guatemala";
+        }
+        else if(imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_15.webp") {
+          lab = "Instalaciones del Campus Universitario de Quetzaltenango, Universidad Mariano Gálvez de Guatemala";
+        }
+        else if(imageSrc == "img/quetzaltenango/galeria/quetzaltenango_galeria_16.webp") {
+          lab = "Instalaciones del Campus Universitario de Quetzaltenango, Universidad Mariano Gálvez de Guatemala";
         }
         else {
           lab = "x";
