--- a/villa-nueva.html
+++ b/villa-nueva.html
@@ -1234,10 +1234,13 @@
                               <p><strong>Procedimiento para solicitar parqueo:</strong></p>
 
                               <ul>
-                              <li>Solicitar formulario en las oficinas del campus, edificio B 2do nivel/ vía correo electrónico <a href="mailto:huehuetenango@umg.edu.gt">huehuetenango@umg.edu.gt</a>. </li>
-                              <li>Pago en línea o en agencia bancaria.</li>
-                              <li>Presentación de comprobante de pago en la oficina del campus con dos fotografías tamaño cedula</li>
-                              <li>Otorgamiento de marbete para ingresar al parqueo.</li>
+                                <li> Solicitar formulario.</li>
+                                  <li> Pago en agencia bancaria.</li>
+                                    <li>Presentación de comprobante de pago.</li>
+                                      <li> Otorgamiento de marbete para ingresar al parqueo.</li>
+                                        <li> Ingreso del formulario a base de datos.</li>
+                                          <li> Archivo de formularios. </li>
+                                
                               </ul>
 
                               <p><strong>Renovar:</strong> Cada semestre</p>
