--- a/quetzaltenango.html
+++ b/quetzaltenango.html
@@ -1327,9 +1327,9 @@
           
           <div class="row">
             <div class="col-3 offset-2 col-md-3 offset-md-0 col-lg-1 icons_service icon-container">
-             <picture>
+              <a  href="#parqueo" data-keyboard="true"  data-bs-toggle="modal"> <picture>
               <img src="img/villa_nueva/iconos/parqueo.svg" style="width: 100%;" alt="Villa Nueva">
-             </picture>
+             </picture></a>
               <p class="service-txt">Parqueo</p>
             </div>
 
@@ -1338,16 +1338,18 @@
   <div class="modal-dialog modal-lg">
       <div class="modal-content">
           <div class="modal-header">
-              <h2 class="modal-title" style="color:#00c1ff; text-align: justify;">Servicio: Parqueo (Campus Huehuetenango)</h2>
+              <h2 class="modal-title" style="color:#00c1ff; text-align: justify;">Servicio: Parqueo (Campus Quetzaltenango)</h2>
               <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
           </div>
           <div class="modal-body" style="text-align: justify;">
 
              
-                <p><strong>Descripción:</strong>  Estacionamiento de vehículos de 2 y 4 ruedas. Parqueo con 487 espacios para estudiantes y docentes
+                <p><strong>Descripción:</strong>   Para estudiantes, docentes y administrativos. Cuenta con parqueo para 500 vehículos, 15 motos y 6 bicicletas.
                 </p>
 
-                <p><strong>Ubicación:</strong>  6a Av. 1-197 Z. 8 Proyecto San José, Huehuetenango</p>
+                <p><strong>Ubicación:</strong>  1a. calle y 9a. Av. Los Alisos y Sauces, zona 1 La Esperanza, Quetzaltenango
+
+                </p>
 
                 <p><strong>Procedimiento para solicitar parqueo</strong></p>
                 <ul>
